# Multimodal-risk-assessment

./: .gitignore  CLEANUP_GUIDE.md  EXECUTION_GUIDE.md  GITHUB_READY.md  OPTIMIZATION_QUICK_REFERENCE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  model_architecture_summary.txt
api/: main.py
multimodal_coercion/: __init__.py  pyproject.toml  requirements.txt
multimodal_coercion/calibration/: __init__.py  baseline.py  demo_baseline.py  test_baseline.py
multimodal_coercion/configs/: __init__.py  default.yaml  models.yaml  thresholds.yaml
multimodal_coercion/core/: __init__.py  config.py  logging.py  persistence.py  registry.py
multimodal_coercion/engine/: __init__.py  audio_utils.py  engine.py  nlp_willingness.py
multimodal_coercion/facial_emotion/: __init__.py  demo_gradcam.py  face_detection.py  features.py  frame_emotion_inference.py  pipeline.py  preprocessing.py  temporal_consistency.py  test_gradcam.py  test_temporal_consistency.py  tf_emotion_model.py  train_fer2013.py  video_emotion_pipeline.py  video_preprocessing.py
multimodal_coercion/fusion/: __init__.py  demo_meta_learner.py  fusion_model.py  test_fusion_meta_learner.py
multimodal_coercion/orchestrator/: __init__.py  run_pipeline.py
multimodal_coercion/risk/: __init__.py  scoring.py
multimodal_coercion/speech/: __init__.py  demo_shap_explainer.py  demo_transcription_confidence.py  nlp_classifier.py  pipeline.py  shap_explainer.py  test_shap_explainer.py  test_transcription_confidence.py  text_preprocess.py  whisper_stt.py
multimodal_coercion/ui/: __init__.py  app.py
(+20 files in other folders)
